index.html file updated

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <img src="images/platform.png" alt="">
       </div>
     </div>
+    <div>hi guys! how days going</div>
 
     <script src="script.js"></script>
   </body>
